Add the detection and right indentation of placa_4

--- a/Actividad1.ipynb
+++ b/Actividad1.ipynb
@@ -220,7 +220,7 @@
         "output_path = \"/content/drive/MyDrive/Image detection/placaFiltrada.jpg\"\n",
         "cv.imwrite(output_path, mask_filtered)\n",
         "\n",
-        "# Mostrar con matplotlib (mejor en Jupyter)\n",
+        "# Mostrar con matplotlib\n",
         "plt.imshow(mask_filtered, cmap='gray')\n",
         "plt.title(\"Máscara Filtrada\")\n",
         "plt.axis('off')\n",
@@ -281,27 +281,33 @@
         "import easyocr\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
+        "# Leer imagen original\n",
         "img = cv.imread(\"/content/drive/MyDrive/Image detection/placa_4.jpg\")\n",
         "hsv = cv.cvtColor(img, cv.COLOR_BGR2HSV)\n",
         "\n",
+        "# Detectar negro\n",
         "lower_black = np.array([0, 0, 0])\n",
         "upper_black = np.array([180, 255, 50])\n",
         "mask = cv.inRange(hsv, lower_black, upper_black)\n",
         "\n",
+        "# Filtro de mediana\n",
         "mask_filtered = cv.medianBlur(mask,7)\n",
         "\n",
-        "\n",
+        "# Guardar máscara\n",
         "output_path = \"/content/drive/MyDrive/Image detection/placaFiltrada4.jpg\"\n",
         "cv.imwrite(output_path, mask_filtered)\n",
         "\n",
+        "# Mostrar con matplotlib\n",
         "plt.imshow(mask_filtered, cmap='gray')\n",
         "plt.title(\"Máscara Filtrada\")\n",
         "plt.axis('off')\n",
         "plt.show()\n",
         "\n",
+        "# OCR con EasyOCR usando CPU\n",
         "reader = easyocr.Reader(['en'], gpu=False)\n",
         "results = reader.readtext(output_path)\n",
         "\n",
+        "# Mostrar texto detectado\n",
         "print(\"Texto detectado:\")\n",
         "for _, text, conf in results:\n",
         "    print(f\"- {text} (confianza: {conf:.2f})\")"
