fix: indentation on imports

--- a/Actividad1.ipynb
+++ b/Actividad1.ipynb
@@ -309,7 +309,7 @@
         "reader = easyocr.Reader(['en'], gpu=False)\n",
         "results = reader.readtext(output_path)\n",
         "\n",
-        "# Mostrar texto detectado\n",
+        "# Mostrar texto detectado.\n",
         "print(\"Texto detectado:\")\n",
         "for _, text, conf in results:\n",
         "    print(f\"- {text} (confianza: {conf:.2f})\")"
